Fix calculator body overlapping test suite button

--- a/src/components/css/App.css
+++ b/src/components/css/App.css
@@ -6,6 +6,7 @@
 
 .calculator {
   background-color: bisque;
+  margin-top:50px;
   width: 100%;
   height: 100%;
   border-radius: 5%;
